[gd_scene load_steps=3 format=3 uid="uid://ddoqnxu2prbpa"]

[ext_resource type="Script" path="res://scenes/ui/admin_window/console/console.gd" id="1_jk6y6"]
[ext_resource type="Script" path="res://scenes/ui/scripts/text_edit.gd" id="2_60tqw"]

[node name="Console" type="MarginContainer"]
offset_right = 132.0
offset_bottom = 47.0
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_jk6y6")

[node name="Contents" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Outputs" type="MarginContainer" parent="Contents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 2

[node name="Output" type="TextEdit" parent="Contents/Outputs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
editable = false
wrap_mode = 1
script = ExtResource("2_60tqw")

[node name="Inputs" type="HBoxContainer" parent="Contents"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3

[node name="CommandInput" type="LineEdit" parent="Contents/Inputs"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
placeholder_text = "Enter \"help\" for a list of commands"
clear_button_enabled = true

[node name="SendButton" type="Button" parent="Contents/Inputs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Send"

[connection signal="child_entered_tree" from="Contents/Outputs/Output" to="Contents/Outputs/Output" method="_on_child_entered_tree"]
[connection signal="text_submitted" from="Contents/Inputs/CommandInput" to="." method="_on_command_input_text_submitted"]
[connection signal="pressed" from="Contents/Inputs/SendButton" to="." method="_on_send_button_pressed"]
